HtmlUI: fixed alignement of checkbox childs checked indicator

--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/style/mixins.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/style/mixins.css
@@ -112,6 +112,7 @@
   font-size: 11px;
   text-align: center;
   line-height: 15px;
+  padding-left: 1px;
 }
 
 .checkboxLabelBeforeBorder {
